bpk-lib/crates/syncbat/tests/ui/operation_macro_non_rust_abi.stderr
error: #[syncbat::operation] only supports Rust ABI functions
 --> tests/ui/operation_macro_non_rust_abi.rs:9:1
  |
9 | extern "C" fn echo(_input: &[u8], _cx: &mut syncbat::Cx<'_>) -> syncbat::HandlerResult {
  | ^^^^^^
